# spannify

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/global-static/: Cargo.toml  README.md
examples/global-static/src/: main.rs
examples/parser/: Cargo.toml  README.md
examples/parser/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
src/: config.rs  core.rs  level.rs  lib.rs  spanner.rs
