[package]
name = "spannify"
version = "0.0.2"
edition = "2021"
description = "A crate that produces nice-looking graphs to visualize your callstack."
license = "MIT"
documentation = "https://docs.rs/spannify"
homepage = "https://github.com/mikeyQwn/spannify"
repository = "https://github.com/mikeyQwn/spannify"

[dependencies]
